--- a/src/index.html
+++ b/src/index.html
@@ -3,4 +3,8 @@ layout: default
 title: BrainsCloud | Home
 ---
 
-Hello!
+<div class="last-news">
+    <h2 class="last-news__title">
+        Последние новости районов
+    </h2>
+</div>
