last news block

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,4 @@ layout: default
 title: BrainsCloud | Home
 ---
 
-<div class="last-news">
-    <h2 class="last-news__title">
-        Последние новости районов
-    </h2>
-</div>
+{{> last-news__block}}
