--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,12 @@ title: BrainsCloud | Home
 
 </div>
 
+<!--
 {{> last-news__block}}
 {{> popular-news__block}}
 {{> school-news__block}}
+-->
+{{> profile-school__block}}
+
 
 
