--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@ title: BrainsCloud | Home
 <div class="last-news">
 
 </div>
-
-{{> last-news__block}}
+{{> schools}}
+<!--{{> last-news__block}}
 {{> popular-news__block}}
-{{> school-news__block}}
+{{> school-news__block}}-->
 
 
