--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,12 @@ title: BrainsCloud | Home
 <div class="last-news">
 
 </div>
-{{> schools}}
-<!--{{> last-news__block}}
+
+<!--
+{{> last-news__block}}
 {{> popular-news__block}}
-{{> school-news__block}}-->
+{{> school-news__block}}
+-->
+{{> profile-school__block}}
 
 
